--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,34 +9,48 @@ jobs:
   build:
     runs-on: ubuntu-20.04                    # similar to "image" in GitLab
     steps:
-      - run: echo "This is a build step"      # similar to "script" in GitLab
+      - uses: actions/checkout@v2
+
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.6'
+
+      - run: |
+          pip3 install --upgrade virtualenv
+          virtualenv env
+          source env/bin/activate
+          pip install -r requirements.txt
+          python manage.py check
 
   test:
-    needs: build
     runs-on: ubuntu-20.04
+    needs: build
     steps:
-      - run: echo "This is a test step"
+      - uses: actions/checkout@v2
+
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.6'
+
+      - run: |
+          pip3 install --upgrade virtualenv
+          virtualenv env
+          source env/bin/activate
+          pip install -r requirements.txt
+          python manage.py test taskManager
 
   integration:
-    needs: test
     runs-on: ubuntu-20.04
-    continue-on-error: true
+    needs: test
     steps:
       - run: echo "This is an integration step"
       - run: exit 1
+        continue-on-error: true
 
   prod:
+    runs-on: ubuntu-20.04
     needs: integration
-    runs-on: ubuntu-20.04
     steps:
-      - run: echo "This is a deploy step"
-
-  artifact:
-    runs-on: ubuntu-20.04
-    steps:
-      - run: echo "hello" > hello.txt
-      - name: Upload hello.txt as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: hello-artifact
-          path: hello.txt
+      - run: echo "This is a deploy step."
