--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,20 @@ jobs:
       - run: echo "This is an integration step"
       - run: exit 1
         continue-on-error: true
+  
+  oast:
+    runs-on: ubuntu-20.04
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
+
+      - run: docker run --rm -v $(pwd):/src hysnsec/safety check -r requirements.txt --json > oast-results.json
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Safety
+          path: oast-results.json
+        if: always()                        # what is this for?
 
   prod:
     runs-on: ubuntu-20.04
