--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,13 +1,13 @@
 name: Django                                  # workflow name
 
 on:
-  push:                                       
+  push:
     branches:                                 # similar to "only" in GitLab
       - main
 
 jobs:
   build:
-    runs-on: ubuntu-20.04                    # similar to "image" in GitLab
+    runs-on: ubuntu-20.04   # similar to "image" in GitLab
     steps:
       - uses: actions/checkout@v2
 
@@ -41,14 +41,6 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  integration:
-    runs-on: ubuntu-20.04
-    needs: test
-    steps:
-      - run: echo "This is an integration step"
-      - run: exit 1
-        continue-on-error: true
-  
   oast:
     runs-on: ubuntu-20.04
     needs: test
@@ -56,12 +48,21 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: docker run --rm -v $(pwd):/src hysnsec/safety check -r requirements.txt --json > oast-results.json
+        continue-on-error: true             # allow the build to fail, similar to "allow_failure: true" in GitLab
 
       - uses: actions/upload-artifact@v4
         with:
           name: Safety
           path: oast-results.json
         if: always()                        # what is this for?
+
+  integration:
+    runs-on: ubuntu-20.04
+    needs: oast
+    steps:
+      - run: echo "This is an integration step"
+      - run: exit 1
+        continue-on-error: true
 
   prod:
     runs-on: ubuntu-20.04
