--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,6 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  release:
-    machine: true                                        # What is this for?
-    steps:
-      - checkout
-      - run: |
-          docker build -t $DOCKER_USERNAME/django.nv .   # Build the application into Docker image
-          docker push $DOCKER_USERNAME/django.nv         # Push the image into registry
-
   integration:
     docker:
       - image: python:3.6
@@ -34,14 +26,13 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: always                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
       - image: python:3.6
     steps:
       - checkout
-      - run: echo "This is a 'deploy' step."
+      - run: echo "This is a deploy step"
 
 workflows:
   version: 2
@@ -50,7 +41,4 @@ workflows:
       - build
       - test
       - integration
-      - prod:
-          type: approval
-          requires:
-            - integration
+      - prod
