--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,6 +41,27 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
+  oast-frontend:
+    runs-on: ubuntu-20.04
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '12.x'
+
+      - run: npm install
+
+      - run: docker run --rm -v $(pwd):/src -w /src hysnsec/retire --outputformat json --outputpath retirejs-report.json --severity high
+
+      - uses: actions/upload-artifact@v4
+        name: "Upload RetireJS Artifact - v4"
+        with:
+          name: RetireJS
+          path: retirejs-report.json
+        if: always()                        # what is this for?
+
   integration:
     runs-on: ubuntu-20.04
     needs: test
